--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
     
     <!-- Lado izquierdo: branding -->
     <div class="col-md-6 brand-side">
-      <img src="img/LOGONegro.png" alt="SEER Tráfico S.C." />
+      <img src="img/LOGOBlanco.png" alt="SEER Tráfico S.C." />
       <h1 class="brand-title">CAAST</h1>
       <p class="brand-subtitle">Portal de Carga de Información</p>
     </div>
